--- a/package.json
+++ b/package.json
@@ -45,23 +45,22 @@
     "numeral": "^2.0.0"
   },
   "devDependencies": {
-    "@angular/animations": "^7.2.16",
-    "@angular/cli": "^7.3.10",
-    "@angular/common": "^7.2.16",
-    "@angular/compiler": "^7.2.16",
-    "@angular/compiler-cli": "^7.2.16",
-    "@angular/core": "^7.2.16",
-    "@angular/forms": "^7.2.16",
-    "@angular/http": "^7.2.16",
-    "@angular/language-service": "^7.2.16",
-    "@angular/platform-browser": "^7.2.16",
-    "@angular/platform-browser-dynamic": "^7.2.16",
-    "@angular/router": "^7.2.16",
+    "@angular/animations": "^8.2.14",
+    "@angular/cli": "^8.3.29",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "bootstrap": "4.0.0-beta.2",
-    "codelyzer": "^4.5.0",
+    "codelyzer": "^5.0.1",
     "copyfiles": "^1.2.0",
     "core-js": "^2.4.1",
     "gh-pages": "^2.0.1",
@@ -83,7 +82,7 @@
     "rxjs": "^6.6.7",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "3.2.4",
-    "zone.js": "^0.8.29"
+    "typescript": "3.5.3",
+    "zone.js": "~0.9.1"
   }
 }
