--- a/package.json
+++ b/package.json
@@ -45,46 +45,46 @@
     "numeral": "^2.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.29",
-    "@angular/animations": "^8.2.14",
-    "@angular/cli": "^8.3.29",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular/animations": "^9.1.13",
+    "@angular/cli": "^9.1.15",
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^9.1.13",
+    "@angular/compiler-cli": "^9.1.13",
+    "@angular/core": "^9.1.13",
+    "@angular/forms": "^9.1.13",
+    "@angular/language-service": "^9.1.13",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "^9.1.13",
+    "@angular/router": "^9.1.13",
     "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/jasminewd2": "^2.0.9",
+    "@types/node": "^12.11.1",
     "bootstrap": "4.0.0-beta.2",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "^5.1.2",
     "copyfiles": "^1.2.0",
-    "core-js": "^2.4.1",
-    "gh-pages": "^2.0.1",
-    "gulp": "^4.0.0",
+    "core-js": "^2.6.12",
+    "gh-pages": "^2.2.0",
+    "gulp": "^4.0.2",
     "gulp-inline-ng2-template": "^5.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.21",
     "node-sass": "^4.13.0",
     "numeral": "^2.0.6",
     "protractor": "~5.1.2",
-    "rimraf": "^2.6.2",
+    "rimraf": "^2.7.1",
     "rxjs": "^6.6.7",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "3.5.3",
-    "zone.js": "~0.9.1"
+    "typescript": "3.8.3",
+    "zone.js": "~0.10.2"
   },
   "dependencies": {
     "tslib": "^1.10.0"
