--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -5,9 +5,11 @@
     "baseUrl": "./",
     "types": []
   },
-  "exclude": [
-    "testing",
-    "test.ts",
-    "**/*.spec.ts"
+  "files": [
+    "main.ts",
+    "polyfills.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
   ]
 }
