--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ngx-numeric-textbox",
-  "version": "6.0.0",
+  "name": "ngx-numeric-textbox-upd",
+  "version": "10.0.0",
   "license": "MIT",
-  "description": "An Angular numeric textbox component",
+  "description": "An update to the original ngx-numeric-textbox - an Angular numeric textbox component. Updated to bum Angular as well as npm dependencies",
   "scripts": {
     "start": "ng serve",
     "lint": "ng lint",
@@ -45,18 +45,18 @@
     "numeral": "^2.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.15",
-    "@angular/animations": "^9.1.13",
-    "@angular/cli": "^9.1.15",
-    "@angular/common": "^9.1.13",
-    "@angular/compiler": "^9.1.13",
-    "@angular/compiler-cli": "^9.1.13",
-    "@angular/core": "^9.1.13",
-    "@angular/forms": "^9.1.13",
-    "@angular/language-service": "^9.1.13",
-    "@angular/platform-browser": "^9.1.13",
-    "@angular/platform-browser-dynamic": "^9.1.13",
-    "@angular/router": "^9.1.13",
+    "@angular-devkit/build-angular": "~0.1002.3",
+    "@angular/animations": "^10.2.5",
+    "@angular/cli": "^10.2.3",
+    "@angular/common": "^10.2.5",
+    "@angular/compiler": "^10.2.5",
+    "@angular/compiler-cli": "^10.2.5",
+    "@angular/core": "^10.2.5",
+    "@angular/forms": "^10.2.5",
+    "@angular/language-service": "^10.2.5",
+    "@angular/platform-browser": "^10.2.5",
+    "@angular/platform-browser-dynamic": "^10.2.5",
+    "@angular/router": "^10.2.5",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "^2.0.9",
     "@types/node": "^12.11.1",
@@ -67,26 +67,26 @@
     "gh-pages": "^2.2.0",
     "gulp": "^4.0.2",
     "gulp-inline-ng2-template": "^5.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.3",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "lodash": "^4.17.21",
     "node-sass": "^4.13.0",
     "numeral": "^2.0.6",
-    "protractor": "~5.1.2",
+    "protractor": "~7.0.0",
     "rimraf": "^2.7.1",
     "rxjs": "^6.6.7",
     "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "3.8.3",
+    "tslint": "~6.1.0",
+    "typescript": "4.0.7",
     "zone.js": "~0.10.2"
   },
   "dependencies": {
-    "tslib": "^1.10.0"
+    "tslib": "^2.0.0"
   }
 }
