--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-numeric-textbox-upd",
-  "version": "11.0.1",
+  "version": "12.0.1",
   "license": "MIT",
   "description": "An update to the original ngx-numeric-textbox - an Angular numeric textbox component. Updated to bum Angular as well as npm dependencies",
   "scripts": {
@@ -11,9 +11,9 @@
     "e2e": "ng e2e",
     "ci": "npm run lint && npm run test-coverage && npm run e2e",
     "prebuild:lib": "rimraf tmp dist/lib",
-    "build:lib": "gulp inline-templates && ngc -p tsconfig-lib.json && copyfiles package.json README.md LICENSE dist/lib",
+    "build:lib": "gulp inline-templates && ng build --configuration production && copyfiles package.json README.md LICENSE dist/lib",
     "prebuild:demo": "rimraf dist/demo",
-    "build:demo": "ng build --prod",
+    "build:demo": "ng build --configuration production",
     "pub:lib": "npm run build:lib && npm publish dist/lib",
     "pub:demo": "npm run build:demo -- --base-href /ngx-numeric-textbox/ && gh-pages -d dist/demo",
     "pub": "npm run pub:lib && npm run pub:demo"
@@ -46,18 +46,18 @@
     "numeral": "^2.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.13",
-    "@angular/animations": "^11.2.14",
-    "@angular/cli": "^11.2.13",
-    "@angular/common": "^11.2.14",
-    "@angular/compiler": "^11.2.14",
-    "@angular/compiler-cli": "^11.2.14",
-    "@angular/core": "^11.2.14",
-    "@angular/forms": "^11.2.14",
-    "@angular/language-service": "^11.2.14",
-    "@angular/platform-browser": "^11.2.14",
-    "@angular/platform-browser-dynamic": "^11.2.14",
-    "@angular/router": "^11.2.14",
+    "@angular-devkit/build-angular": "~12.2.16",
+    "@angular/animations": "^12.2.16",
+    "@angular/cli": "^12.2.16",
+    "@angular/common": "^12.2.16",
+    "@angular/compiler": "^12.2.16",
+    "@angular/compiler-cli": "^12.2.16",
+    "@angular/core": "^12.2.16",
+    "@angular/forms": "^12.2.16",
+    "@angular/language-service": "^12.2.16",
+    "@angular/platform-browser": "^12.2.16",
+    "@angular/platform-browser-dynamic": "^12.2.16",
+    "@angular/router": "^12.2.16",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.9",
     "@types/node": "^12.11.1",
@@ -83,8 +83,8 @@
     "rxjs": "^6.6.7",
     "ts-node": "~3.2.0",
     "tslint": "~6.1.0",
-    "typescript": "4.0.7",
-    "zone.js": "~0.10.2"
+    "typescript": "4.3.5",
+    "zone.js": "~0.11.4"
   },
   "dependencies": {
     "tslib": "^2.0.0"
